[package]
name = "bevy_jam"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.10.1", features = ["dynamic_linking"]}
bevy_rapier2d = "0.21.0"
bevy_ecs_tilemap = "0.10.0"
leafwing-input-manager = { version="0.9.1" }
rand = "0.8.5"